Added header to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,4 +4,19 @@
     <meta charset="utf-8" />
     <title>Ruben Estrada Resume</title>
   </head>
+  <body>
+    <header class="h-card" id="header">
+      <h1 class="p-name">Ruben Estrada</h1> 
+      <section  class="contact-info">
+        <ul>
+          <li><a class="u-email" href="mailto:restrad2@hawk.iit.edu">restrad2@hawk.iit.edu</a></li>
+          <li id="phone-number">773-971-0662</li>
+          <li><a href="https://www.linkedin.com/in/ruben-estrada-45351777">LinkedIn</a>
+        </ul>
+      </section>
+    <header>
+    <section class="education">
+      <h2>Education</h2>
+    </section>
+  </body>
 </html>
