--- a/resume/index.html
+++ b/resume/index.html
@@ -7,14 +7,12 @@
   <body>
     <header class="h-card" id="header">
       <h1 class="p-name">Ruben Estrada</h1> 
-      <section  class="contact-info">
-        <ul>
+      <ul class="contact-info">
           <li><a class="u-email" href="mailto:restrad2@hawk.iit.edu">restrad2@hawk.iit.edu</a></li>
-          <li id="phone-number">773-971-0662</li>
-          <li><a href="https://www.linkedin.com/in/ruben-estrada-45351777">LinkedIn</a>
-        </ul>
-      </section>
-    <header>
+          <li class="p-tel" id="phone-number">773-971-0662</li>
+          <li><a href="https://www.linkedin.com/in/ruben-estrada-45351777">LinkedIn</a></li>
+      </ul>
+    </header>
     <section class="education">
       <h2>Education</h2>
     </section>
