--- a/resume/index.html
+++ b/resume/index.html
@@ -15,6 +15,25 @@
     </header>
     <section class="education">
       <h2>Education</h2>
+      <ul>
+        <li>Illinois Institute of Technology
+          <ul>
+            <li>Graduating December 2016</li>
+            <li>B.S. Computer Science</li>
+            <li>Relevant Coursework
+              <ul>
+                <li>Object Oriented Design Programming</li>
+                <li>Systems Programming</li>
+                <li>Software Engineering</li>
+                <li>Data Structures &amp; Algorithms</li>
+                <li>Database Organization</li>
+                <li>Fundamentals of Web Development</li>
+                <li>Introduction to Wireless Networks &amp; Performance</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
