Added Skills to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -35,5 +35,44 @@
         </li>
       </ul>
     </section>
+    <section class="experience">
+      <h2>Experience</h2>
+    </section>
+    <section class="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Programming Languages
+          <ul>
+            <li>Java</li>
+            <li>MySQL</li>
+            <li>Python</li>
+            <li>C</li>
+            <li>HTML</li>
+            <li>XML</li>
+            <li>Haskell</li>
+          </ul>
+        </li>
+        <li>Development
+          <ul>
+            <li>Git Version Control</li>
+            <li>Unit Testing</li>
+            <li>RESTFul Interface</li>
+            <li>UML Diagrams</li>
+          </ul>
+        </li>
+        <li>Software
+          <ul>
+            <li>AutoCAD</li>
+            <li>Photoshop</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class="awards">
+      <h2>Awards</h2>
+    </section>
+    <section class="volunteer-work">
+      <h2>Volunteer Work</h2>
+    </section>
   </body>
 </html>
