Changed some class attributes to id

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,13 +7,13 @@
   <body>
     <header class="h-card" id="header">
       <h1 class="p-name">Ruben Estrada</h1> 
-      <ul class="contact-info">
-          <li><a class="u-email" href="mailto:restrad2@hawk.iit.edu">restrad2@hawk.iit.edu</a></li>
+      <ul id="contact-info">
+          <li><a class="u-email" id="email" href="mailto:restrad2@hawk.iit.edu">restrad2@hawk.iit.edu</a></li>
           <li class="p-tel" id="phone-number">773-971-0662</li>
-          <li><a href="https://www.linkedin.com/in/ruben-estrada-45351777">LinkedIn</a></li>
+          <li><a id="linkedin" href="https://www.linkedin.com/in/ruben-estrada-45351777">LinkedIn</a></li>
       </ul>
     </header>
-    <section class="education">
+    <section id="education">
       <h2>Education</h2>
       <ul>
         <li>Illinois Institute of Technology
@@ -35,10 +35,10 @@
         </li>
       </ul>
     </section>
-    <section class="experience">
+    <section id="experience">
       <h2>Experience</h2>
     </section>
-    <section class="skills">
+    <section id="skills">
       <h2>Skills</h2>
       <ul>
         <li>Programming Languages
@@ -68,10 +68,10 @@
         </li>
       </ul>
     </section>
-    <section class="awards">
+    <section id="awards">
       <h2>Awards</h2>
     </section>
-    <section class="volunteer-work">
+    <section id="volunteer-work">
       <h2>Volunteer Work</h2>
     </section>
   </body>
