Added awards and volunteer work

--- a/resume/index.html
+++ b/resume/index.html
@@ -70,9 +70,30 @@
     </section>
     <section id="awards">
       <h2>Awards</h2>
+      <ul>
+        <li>STEM+ Scholarship</li>
+        <li>Heald Scholarship</li>
+        <li>Protiviti Scholarship</li>
+        <li>Chicago Engineers Foundation Scholarship</li>
+      </ul>
     </section>
     <section id="volunteer-work">
       <h2>Volunteer Work</h2>
+      <ul>
+        <li>Viva Technology
+          <ul>
+            <li>March 1013-Present</li>
+            <li>College Captain-Mentored groups of elementary and high school students through
+           multiple challenges provided to them in order to increase their interest in the STEM field</li>
+          </ul>
+        </li>
+        <li>FreeGeek Chicago
+          <ul>
+            <li>November 2014-September 2015</li>
+            <li>Took apart donated computers and recycled them to provide functional computers to those who want them</li>
+          </ul>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
