Fixed indentation error

--- a/resume/index.html
+++ b/resume/index.html
@@ -84,13 +84,14 @@
           <ul>
             <li>March 1013-Present</li>
             <li>College Captain-Mentored groups of elementary and high school students through
-           multiple challenges provided to them in order to increase their interest in the STEM field</li>
+            multiple challenges provided to them in order to increase their interest in the STEM field</li>
           </ul>
         </li>
         <li>FreeGeek Chicago
           <ul>
             <li>November 2014-September 2015</li>
-            <li>Took apart donated computers and recycled them to provide functional computers to those who want them</li>
+            <li>Took apart donated computers and recycled them to provide functional computers to 
+            those who want them</li>
           </ul>
         </li>
       </ul>
