--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
     <section id="education">
       <h2>Education</h2>
       <ul>
-        <li>Illinois Institute of Technology
+        <li><b>Illinois Institute of Technology</b>
           <ul>
             <li>Graduating December 2016</li>
             <li>B.S. Computer Science</li>
@@ -41,7 +41,7 @@
     <section id="skills">
       <h2>Skills</h2>
       <ul>
-        <li>Programming Languages
+        <li><b>Programming Languages</b>
           <ul>
             <li>Java</li>
             <li>MySQL</li>
@@ -52,7 +52,7 @@
             <li>Haskell</li>
           </ul>
         </li>
-        <li>Development
+        <li><b>Development</b>
           <ul>
             <li>Git Version Control</li>
             <li>Unit Testing</li>
@@ -60,7 +60,7 @@
             <li>UML Diagrams</li>
           </ul>
         </li>
-        <li>Software
+        <li><b>Software</b>
           <ul>
             <li>AutoCAD</li>
             <li>Photoshop</li>
@@ -80,14 +80,14 @@
     <section id="volunteer-work">
       <h2>Volunteer Work</h2>
       <ul>
-        <li>Viva Technology
+        <li><b>Viva Technology</b>
           <ul>
             <li>March 1013-Present</li>
             <li>College Captain-Mentored groups of elementary and high school students through
             multiple challenges provided to them in order to increase their interest in the STEM field</li>
           </ul>
         </li>
-        <li>FreeGeek Chicago
+        <li><b>FreeGeek Chicago</b>
           <ul>
             <li>November 2014-September 2015</li>
             <li>Took apart donated computers and recycled them to provide functional computers to 
