--- a/resume/index.html
+++ b/resume/index.html
@@ -35,8 +35,64 @@
         </li>
       </ul>
     </section>
-    <section id="experience">
-      <h2>Experience</h2>
+    <section id="work-experience">
+      <h2>Work Experience</h2>
+      <ul>
+        <li><b>Construction CAD Solutions</b>
+          <ul>
+            <li>March 2015-Present</li>
+            <li>Willowbrook, IL</li>
+            <li>CAD Tech
+              <ul>
+                <li>Design Base CADs, Permit CADs, Railroad CADs using:
+                  <ul>
+                    <li>AutoCAD</li>
+                    <li>County GISs</li>
+                    <li>Google Earth/Maps</li>
+                    <li>Information Retrieval Files</li>
+                  </ul>
+                </li>
+                <li>Quality check permits and complete revisions</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><b>Exelon Summer Institute</b>
+          <ul>
+            <li>June 2014-August 2015</li>
+            <li>Chicago, IL</li>
+            <li>Teacher Assistant
+              <ul>
+                <li>Instructed and tutored incoming IIT freshmen in the concepts of Java and programmed Arduino robots. Concepts taught include:
+                  <ul>
+                    <li>Data types</li>
+                    <li>Loops</li>
+                    <li>Arrays</li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><b>Freelance Coder Camp</b>
+          <ul>
+            <li>June 2014-August 2015</li>
+            <li>Chicago, IL</li>
+            <li>Teacher Assistant
+              <ul>
+                <li>Instructed high school students in the concepts of Java and programmed Arduino robots. Concepts taught include:
+                  <ul>
+                    <li>Data types</li>
+                    <li>Loops</li>
+                    <li>Arrays</li>
+                  </ul>
+                </li>
+                <li>Assisted the students with HTML, CSS, and PHP</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </section>
     <section id="skills">
       <h2>Skills</h2>
