Changed bold tags to headers

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
     <section id="education">
       <h2>Education</h2>
       <ul>
-        <li><b>Illinois Institute of Technology</b>
+        <li><h3>Illinois Institute of Technology</h3>
           <ul>
             <li>Graduating December 2016</li>
             <li>B.S. Computer Science</li>
@@ -38,7 +38,7 @@
     <section id="work-experience">
       <h2>Work Experience</h2>
       <ul>
-        <li><b>Construction CAD Solutions</b>
+        <li><h3>Construction CAD Solutions</h3>
           <ul>
             <li>March 2015-Present</li>
             <li>Willowbrook, IL</li>
@@ -57,7 +57,7 @@
             </li>
           </ul>
         </li>
-        <li><b>Exelon Summer Institute</b>
+        <li><h3>Exelon Summer Institute</h3>
           <ul>
             <li>June 2014-August 2015</li>
             <li>Chicago, IL</li>
@@ -74,7 +74,7 @@
             </li>
           </ul>
         </li>
-        <li><b>Freelance Coder Camp</b>
+        <li><h3>Freelance Coder Camp</h3>
           <ul>
             <li>June 2014-August 2015</li>
             <li>Chicago, IL</li>
@@ -97,7 +97,7 @@
     <section id="skills">
       <h2>Skills</h2>
       <ul>
-        <li><b>Programming Languages</b>
+        <li><h3>Programming Languages</h3>
           <ul>
             <li>Java</li>
             <li>MySQL</li>
@@ -108,7 +108,7 @@
             <li>Haskell</li>
           </ul>
         </li>
-        <li><b>Development</b>
+        <li><h3>Development</h3>
           <ul>
             <li>Git Version Control</li>
             <li>Unit Testing</li>
@@ -116,7 +116,7 @@
             <li>UML Diagrams</li>
           </ul>
         </li>
-        <li><b>Software</b>
+        <li><h3>Software</h3>
           <ul>
             <li>AutoCAD</li>
             <li>Photoshop</li>
@@ -136,14 +136,14 @@
     <section id="volunteer-work">
       <h2>Volunteer Work</h2>
       <ul>
-        <li><b>Viva Technology</b>
+        <li><h3>Viva Technology</h3>
           <ul>
             <li>March 1013-Present</li>
             <li>College Captain-Mentored groups of elementary and high school students through
             multiple challenges provided to them in order to increase their interest in the STEM field</li>
           </ul>
         </li>
-        <li><b>FreeGeek Chicago</b>
+        <li><h3>FreeGeek Chicago</h3>
           <ul>
             <li>November 2014-September 2015</li>
             <li>Took apart donated computers and recycled them to provide functional computers to 
