Working on nav and added footer to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <title>Ruben Estrada Resume</title>
   </head>
   <body>
     <header class="h-card" id="header">
+      <nav class="nav">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../about/index.html">About me</a></li>
+        </ul>
+      </nav>
       <h1 class="p-name">Ruben Estrada</h1> 
       <ul id="contact-info">
           <li><a class="u-email" id="email" href="mailto:restrad2@hawk.iit.edu">restrad2@hawk.iit.edu</a></li>
@@ -152,5 +159,8 @@
         </li>
       </ul>
     </section>
+    <footer>
+      <p>Created by Ruben Estrada</p>
+    </footer>
   </body>
 </html>
