Fixed home references and added footer

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="../about/index.html">About Me</a></li>
-          <li><a href="../resume/index.html">Resume</a></li>
+          <li><a href="./about/index.html">About Me</a></li>
+          <li><a href="./resume/index.html">Resume</a></li>
         </ul>
       </nav>
     </header>
     <section id="home">
       <h1>Home</h1>
-      <p class=describtion>Hello there</p>
+      <p class="describtion">Hello there, from here you can get to any of the other three websites. Enjoy</p>
     </section>
+    <footer>
+      <p>Created by Ruben Estrada</p>
+    </footer>
   </body>
-</hrml>
+</html>
