Added About me nav and gif to home page

--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shirnk-to-fit=no" />
-    <title>Ruben Estrada Home</title>
+    <title>Ruben Estrada-Home</title>
+    <style>
+      img{
+        display:block;
+        max-width: 100%;
+      }
+    </style>
   </head>
   <body>
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="./about/index.html">About Me</a></li>
-          <li><a href="./resume/index.html">Resume</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about/">About me</a></li>
+          <li><a href="/resume/">Resume</a></li>
         </ul>
       </nav>
     </header>
     <section id="home">
       <h1>Home</h1>
-      <p class="describtion">Hello there, from here you can get to any of the other three websites. Enjoy</p>
+      <p class="description">Hello there, from here you can get to any of the other three websites. Enjoy</p>
+      <figure class="gif">
+        <img src="/gif/hi.gif" alt="Gif of snail waving hi">
+      </figure> 
     </section>
     <footer>
       <p>Created by Ruben Estrada</p>
