--- a/resume/index.html
+++ b/resume/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-    <title>Ruben Estrada Resume</title>
+    <title>Ruben Estrada-Resume</title>
   </head>
   <body>
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../about/index.html">About me</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about/">About me</a></li>
+          <li><a href="/resume/">Resume</a></li>
         </ul>
       </nav>
       <h1 class="p-name">Ruben Estrada</h1> 
