--- a/about/index.html
+++ b/about/index.html
@@ -6,15 +6,19 @@
     <title>Ruben Estrada-About me</title>
   </head>
   <body>
-    <header>
+    <header class="h-card" id="header">
       <nav class="nav">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about/">About me</a></li>
           <li><a href="/resume/">Resume</a></li>
+          <li><a href="/adventures/">Adventures</a></li>
         </ul>
       </nav>
     </header>
+    <section id="pets">
+      <h2>Pets</h2>
+    </section>
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
