--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about/">About me</a></li>
           <li><a href="/resume/">Resume</a></li>
+          <li><a href="/adventures/">Adventures</a></li>
         </ul>
       </nav>
     </header>
