--- a/resume/index.html
+++ b/resume/index.html
@@ -12,6 +12,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about/">About me</a></li>
           <li><a href="/resume/">Resume</a></li>
+          <li><a href="/adventures/">Adventures</a></li>
         </ul>
       </nav>
       <h1 class="p-name">Ruben Estrada</h1> 
