--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>Home</h1>
       <p class="description">Hello there, from here you can get to any of the other three websites. Enjoy</p>
       <figure class="gif">
-        <img src="/media/gif/hi.gif" alt="Gif of snail waving hi">
+        <img src="/media/gif/hi.gif" alt="Gif of snail waving hi" />
       </figure> 
     </section>
     <footer>
