--- a/adventures/index.html
+++ b/adventures/index.html
@@ -19,6 +19,8 @@
     <section id="indiana-dunes">
       <h2>Indiana Dunes</h2>
     </section>
+    <section id="starved-rock">
+    </section>
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
