--- a/about/index.html
+++ b/about/index.html
@@ -23,10 +23,21 @@
       </nav>
     </header>
     <h1>About Me</h1>
+    <section id="background">
+      <h2>Background</h2>
+      <p>
+        My name is Ruben Estrada. I am a Computer Science major and in my last semester at IIT.
+        I feel bittersweet about graduating. I am looking forward to getting my degree but I am 
+        not looking forward to working 40 hours each week for the rest of my life. I am a member of the Omega Delta National Fraternity. Although I am currently the Treasurer, I have been the Vice President, and Risk Management positions in previous semesters.During high school, I was part of the chess club, robotics team, and tennis team. I was able to participate in the state chess tournament. I also went to the First robotics competition with the robotics team. It was a lot of fun. Both of these activities required strategy and problem solving. Often an unexpected piece of the robot would break in between rounds and it would require quick thinking to fix.
+      </p>
+    </section>
+    <section id="hobbies">
+      <h2>Hobbies</h2>
+    </section>
     <section id="pets">
       <h2>Pets</h2>
       <ul>
-        <li>Star the dog
+        <li><h3>Star the dog</h3>
           <figure class="photo">
             <img
               srcset="/media/img/star4032-3024.jpg 4032w, /media/img/star2000-1500.jpg 2000w, /media/img/star1000-750.jpg 1000w, /media/img/star750-563.jpg 750w, /media/img/star500-375.jpg 500w"
@@ -39,16 +50,22 @@
             </figcaption>
           </figure>
         </li>
-        <li>Shelly the turtle
+        <li><h3>Shelly the turtle</h3>
           <figure class="video">
             <video controls="controls">
               <source src="/media/video/turtle.mp4" type="video/mp4" />
               <source src="/media/video/turtle.webm" type="video/webm" />
               <p>
                 Download the video in
-                <a href"/media/video/turtle.mp4">MPEG</a> format.
+                <a href="/media/video/turtle.mp4">MPEG</a> format.
               </p>
             </video>
+            <figcaption>
+              <p>
+                Shelly eating lettuce.
+              </p>
+            </figcaption>
+          </figure>
         </li>
       </ul>
     </section>
