--- a/about/index.html
+++ b/about/index.html
@@ -28,16 +28,36 @@
       <p>
         My name is Ruben Estrada. I am a Computer Science major and in my last semester at IIT.
         I feel bittersweet about graduating. I am looking forward to getting my degree but I am 
-        not looking forward to working 40 hours each week for the rest of my life. I am a member of the Omega Delta National Fraternity. Although I am currently the Treasurer, I have been the Vice President, and Risk Management positions in previous semesters.During high school, I was part of the chess club, robotics team, and tennis team. I was able to participate in the state chess tournament. I also went to the First robotics competition with the robotics team. It was a lot of fun. Both of these activities required strategy and problem solving. Often an unexpected piece of the robot would break in between rounds and it would require quick thinking to fix.
+        not looking forward to working 40 hours each week for the rest of my life. I am a member of the Omega Delta National Fraternity. Although I am currently the Treasurer, I have been the Vice President, and Risk Management positions in previous semesters. During high school, I was part of the chess club, robotics team, and tennis team. I was able to participate in the state chess tournament. I also went to the First robotics competition with the robotics team. It was a lot of fun. Both of these activities required strategy and problem solving. Often an unexpected piece of the robot would break in between rounds and it would require quick thinking to fix.
       </p>
     </section>
     <section id="hobbies">
       <h2>Hobbies</h2>
+      <ul>
+        <li><h3>Gaming</h3>
+          <p>
+            Video games have always been a part of my life. My first video game system was the Super Nintendo. I remember knowing every secret in Super Mario Bros and just breezing through the levels. Even today, I spend most of my free time playing video games with my friends. The game I currently play the most is League of Legends. I've been playing this game frequently for the past 3 years. I have also recently started playing Overwatch. 
+          </p>
+        </li>
+        <li><h3>Drawing</h3>
+          <p>
+            Drawing was one of my biggest hobbies during high school. I would draw random characters for the fun of it and sometimes requested characters. However, I am still not good at coming up with my own figures. I usually look up pictures and use that as a base. However, I have not practiced this the past few years but I want to get back into it. 
+          </p>
+        </li>
+        <li><h3>Chess</h3>
+          <p>
+            Although I have not played chess as much after finishing high school. I still like to play it occasionally with friends. I like that chess is challenging and every game is different. It is also a completely different experience playing against different opponents.
+          </p>
+        </li>
+      </ul>
     </section>
     <section id="pets">
       <h2>Pets</h2>
       <ul>
         <li><h3>Star the dog</h3>
+          <p>
+            Star has been a part of the family since she was a few months old. She is currently 4 years old and still as energetic as always.
+          </p>
           <figure class="photo">
             <img
               srcset="/media/img/star4032-3024.jpg 4032w, /media/img/star2000-1500.jpg 2000w, /media/img/star1000-750.jpg 1000w, /media/img/star750-563.jpg 750w, /media/img/star500-375.jpg 500w"
@@ -51,6 +71,8 @@
           </figure>
         </li>
         <li><h3>Shelly the turtle</h3>
+          <p>Shelly is a non violent turtle. She has never bit anyone before (at least that I know of). She likes to roam around the house and only comes out when she wants food or water.
+          </p>
           <figure class="video">
             <video controls="controls">
               <source src="/media/video/turtle.mp4" type="video/mp4" />
@@ -62,7 +84,7 @@
             </video>
             <figcaption>
               <p>
-                Shelly eating lettuce.
+                Shelly eating lettuce after an adventure.
               </p>
             </figcaption>
           </figure>
