Added another hobby

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,12 @@
       <ul>
         <li><h3>Gaming</h3>
           <p>
-            Video games have always been a part of my life. My first video game system was the Super Nintendo. I remember knowing every secret in Super Mario Bros and just breezing through the levels. Even today, I spend most of my free time playing video games with my friends. The game I currently play the most is League of Legends. I've been playing this game frequently for the past 3 years. I have also recently started playing Overwatch. 
+            Video games have always been a part of my life. My first video game system was the Super Nintendo. I remember knowing every secret in Super Mario Bros and just breezing through the levels. Even today, I spend a lot of my free time playing video games with my friends. The game I currently play the most is League of Legends. I've been playing this game frequently for the past 3 years. I have also recently started playing Overwatch. 
+          </p>
+        </li>
+        <li><h3>Watching Cartoons and Anime</h3>
+          <p>
+            Next to video games, watching anime takes up a big chunk of my free time. There exists a lot of good animes. I was thinking of making a website for my top 10 anime but it would be hard to decide. One of my favorite animes is called Gurren Lagann. It is epic and inspirational. Besides anime, I like to watch cartoons and studio Ghibli movies. I cosplayed Ashitaka from the movie Princess Mononoke this past Anime Midwest convention. Although Adventure time is often seen as a kids cartoon, it is really emotional and deep. This makes it one of my favorite cartoons at the moment. 
           </p>
         </li>
         <li><h3>Drawing</h3>
