--- a/adventures/index.html
+++ b/adventures/index.html
@@ -16,6 +16,7 @@
         </ul>
       </nav>
     </header>
+    <h1>Adventure Time!</h1>
     <section id="indiana-dunes">
       <h2>Indiana Dunes</h2>
     </section>
