Missed one long line

--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,8 @@
             a lot of good animes. I was thinking of making a website for my top 10 anime but it 
             would be hard to decide. One of my favorite animes is called Gurren Lagann. It is epic 
             and inspirational. Besides anime, I like to watch cartoons and studio Ghibli movies. I 
-            cosplayed Ashitaka from the movie Princess Mononoke this past Anime Midwest convention. Although Adventure time is often seen as a kids cartoon, it is really emotional and 
+            cosplayed Ashitaka from the movie Princess Mononoke this past Anime Midwest convention.
+             Although Adventure time is often seen as a kids cartoon, it is really emotional and 
             deep. This makes it one of my favorite cartoons at the moment. 
           </p>
         </li>
