Actually added two pictures to Indiana Dunes adventure, removed sizes and fixed captions

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <title>Ruben Estrada-Adventures</title>
+    <style>
+      img{
+        display:block;
+        max-width: 100%;
+      }
+    </style>
   </head>
   <body>
     <header class="h-card" id="header">
@@ -19,11 +25,41 @@
     <h1>Adventure Time!</h1>
     <section id="indiana-dunes">
       <h2>Indiana Dunes</h2>
+      <p>
+        Indiana Dunes is a beautiful place.
+      </p>
+      <figure class="photo">
+        <img src="/media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
+        <figcaption>
+          <p>
+            You can relax in the water after adventuring in the woods.
+          </p>
+        </figcaption>
+      </figure>
+      <figure class="photo">
+        <img src="/media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
+        <figcaption>
+          <p>
+            The views at the top of the dunes are amazing. You get to see how big the surrounding forest is and how close you are to the beach. 
+          </p>
+        </figcaption>
+      </figure>
     </section>
     <section id="starved-rock">
+      <h2>Starved Rock</h2>
     </section>
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
   </body>
 </html>
+
+<!--    
+      <figure class="photo">
+        <img src="/media/img/indiana-dunes.jpg" alt="" />
+        <figurecaption>
+          <p>
+          </p>
+        </figurecaption>
+      </figure>
+ -->
