Made pictures into a list and finished Indiana Dunes. Started on Starved Rock

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -28,25 +28,76 @@
       <p>
         Indiana Dunes is a beautiful place.
       </p>
-      <figure class="photo">
-        <img src="/media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
-        <figcaption>
-          <p>
-            You can relax in the water after adventuring in the woods.
-          </p>
-        </figcaption>
-      </figure>
-      <figure class="photo">
-        <img src="/media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
-        <figcaption>
-          <p>
-            The views at the top of the dunes are amazing. You get to see how big the surrounding forest is and how close you are to the beach. 
-          </p>
-        </figcaption>
-      </figure>
+      <ul>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
+            <figcaption>
+              <p>
+                You can relax in the water after adventuring in the woods.
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
+            <figcaption>
+              <p>
+                The views at the top of the dunes are amazing. You get to see how big the surrounding forest is and how close you are to the beach. 
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/indiana-dunes3.jpg" alt="Picture of a road that leads deeper into the forest" />
+            <figcaption>
+              <p>
+                Indiana Dunes is a big national park. Even just getting from one camp site to the other takes a while when walking.
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/indiana-dunes4.jpg" alt="Picture of trail inside the forest" />
+            <figcaption>
+              <p>
+                There are many trails inside Indiana Dunes. It is easy to get lost if you are not following the trails and signs. 
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+      </ul>
     </section>
     <section id="starved-rock">
       <h2>Starved Rock</h2>
+      <p>
+        Starved Rock is a must visit if you are in Illinois. It is bigger than Indiana Dunes and it has many beautiful areas. 
+      </p>
+      <ul>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/starved-rock1.jpg" alt="Picture of a trail to a canyon" />
+            <figcaption>
+              <p>
+                The canyon water makes paths through the rocks.
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/starved-rock2.jpg" alt="Picture of the lake and dam" />
+            <figcaption>
+              <p>
+                Climbing to the top of the mountains gives you a nice view of the lake and dam. 
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+      </ul>
     </section>
     <footer>
       <p>Created by Ruben Estrada</p>
@@ -55,11 +106,11 @@
 </html>
 
 <!--    
-      <figure class="photo">
-        <img src="/media/img/indiana-dunes.jpg" alt="" />
-        <figurecaption>
-          <p>
-          </p>
-        </figurecaption>
-      </figure>
+          <figure class="photo">
+            <img src="/media/img/starved-rock.jpg" alt="" />
+            <figcaption>
+              <p>
+              </p>
+            </figcaption>
+          </figure>
  -->
