Finished adding all the Starved Rock pictures

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -97,6 +97,36 @@
             </figcaption>
           </figure>
         </li>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/starved-rock3.jpg" alt="Picture of a small canyon" />
+            <figcaption>
+              <p>
+                There are canyons of different sices at Starved Rock. This is one of the smaller ones.
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/starved-rock4.jpg" alt="Picture of a big canyon" />
+            <figcaption>
+              <p>
+                This one is one of the bigger canyons. The falling water is very refreshing, specially in a sunny day.
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure class="photo">
+            <img src="/media/img/starved-rock5.jpg" alt="Picture of the lake in the evening" />
+            <figcaption>
+              <p>
+                The lake looks beautiful during certain times of the day, evening being one of them.
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </section>
     <footer>
@@ -104,13 +134,3 @@
     </footer>
   </body>
 </html>
-
-<!--    
-          <figure class="photo">
-            <img src="/media/img/starved-rock.jpg" alt="" />
-            <figcaption>
-              <p>
-              </p>
-            </figcaption>
-          </figure>
- -->
