Updated Indiana Dunes description

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -26,7 +26,8 @@
     <section id="indiana-dunes">
       <h2>Indiana Dunes</h2>
       <p>
-        Indiana Dunes is a beautiful place.
+        Indiana Dunes is a beautiful place. It has a park within the forest and places to have cookouts. Some of the trails can be really hard since the sand makes it harder to walk.
+        However, getting to the beach after finishing the trail makes it worth it.
       </p>
       <ul>
         <li>
