Adding basic css file and link to the html files

--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shirnk-to-fit=no" />
+    <link rel="stylesheet" media="screen" href="css/screen.css" />
     <title>Ruben Estrada-Home</title>
-    <style>
-      img{
-        display:block;
-        max-width: 100%;
-      }
-    </style>
   </head>
   <body>
+  <div id="page">
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
@@ -32,5 +28,6 @@
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
+  </div>
   </body>
 </html>
