--- a/adventures/index.html
+++ b/adventures/index.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link rel="stylesheet" media="screen" href="../css/screen.css" />
     <title>Ruben Estrada-Adventures</title>
-    <style>
-      img{
-        display:block;
-        max-width: 100%;
-      }
     </style>
   </head>
   <body>
+  <div id="page">
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
@@ -133,5 +130,6 @@
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
+  </div>
   </body>
 </html>
