--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <nav class="nav">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/about/">About me</a></li>
+          <li><a href="/about/">About</a></li>
           <li><a href="/resume/">Resume</a></li>
-          <li><a href="/adventures/">Adventures</a></li>
+          <li><a href="/adventures/">Places</a></li>
         </ul>
       </nav>
     </header>
