--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about/">About</a></li>
           <li><a href="/resume/">Resume</a></li>
-          <li><a href="/adventures/">Places</a></li>
+          <li><a href="/places/">Places</a></li>
         </ul>
       </nav>
     </header>
