Centered images, videos, and gifs. Added active page id and hover state

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li id="active"><a href="/">Home</a></li>
           <li><a href="/about/">About</a></li>
           <li><a href="/resume/">Resume</a></li>
           <li><a href="/places/">Places</a></li>
