--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
       <nav class="nav">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/about/">About</a></li>
+          <li id="active"><a href="/about/">About</a></li>
           <li><a href="/resume/">Resume</a></li>
           <li><a href="/places/">Places</a></li>
         </ul>
