--- a/places/index.html
+++ b/places/index.html
@@ -15,7 +15,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about/">About</a></li>
           <li><a href="/resume/">Resume</a></li>
-          <li><a href="/places/">Places</a></li>
+          <li id="active"><a href="/places/">Places</a></li>
         </ul>
       </nav>
     </header>
