--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about/">About</a></li>
-          <li><a href="/resume/">Resume</a></li>
+          <li id="active"><a href="/resume/">Resume</a></li>
           <li><a href="/places/">Places</a></li>
         </ul>
       </nav>
