Changed title dashes to colons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shirnk-to-fit=no" />
     <link rel="stylesheet" media="screen" href="css/screen.css" />
-    <title>Ruben Estrada-Home</title>
+    <title>Ruben Estrada: Home</title>
   </head>
   <body>
   <div id="page">
