--- a/places/index.html
+++ b/places/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel="stylesheet" media="screen" href="../css/screen.css" />
-    <title>Ruben Estrada-Places</title>
+    <title>Ruben Estrada: Places</title>
     </style>
   </head>
   <body>
