--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shirnk-to-fit=no" />
     <link rel="stylesheet" media="screen" href="css/screen.css" />
+    <link rel="icon" type="image/ico" href="media/img/favicon.ico" />
     <title>Ruben Estrada: Home</title>
   </head>
   <body>
@@ -29,5 +30,6 @@
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
+  <script src="js/modernizr.js"></script>
   </body>
 </html>
