--- a/places/index.html
+++ b/places/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel="stylesheet" media="screen" href="../css/screen.css" />
+    <link rel="icon" type="image/ico" href="../media/img/favicon.ico" />
     <title>Ruben Estrada: Places</title>
     </style>
   </head>
@@ -131,5 +132,6 @@
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
+  <script src="js/modernizr.js"></script>
   </body>
 </html>
