--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel="stylesheet" media="screen" href="../css/screen.css" />
+        <link rel="icon" type="image/ico" href="../media/img/favicon.ico" />
     <title>Ruben Estrada: Resume</title>
   </head>
   <body>
@@ -167,5 +168,6 @@
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
+  <script src="js/modernizr.js"></script>
   </body>
 </html>
