Changed source references to work with mypages.iit.edu

--- a/places/index.html
+++ b/places/index.html
@@ -13,10 +13,10 @@
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about/">About</a></li>
-          <li><a href="/resume/">Resume</a></li>
-          <li id="active"><a href="/places/">Places</a></li>
+          <li><a href="../">Home</a></li>
+          <li><a href="../about/">About</a></li>
+          <li><a href="../resume/">Resume</a></li>
+          <li id="active"><a href="../places/">Places</a></li>
         </ul>
       </nav>
     </header>
@@ -30,7 +30,7 @@
       <ul>
         <li>
           <figure class="photo">
-            <img src="/media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
+            <img src="../media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
             <figcaption>
               <p>
                 You can relax in the water after adventuring in the woods.
@@ -40,7 +40,7 @@
         </li>
         <li>
           <figure class="photo">
-            <img src="/media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
+            <img src="../media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
             <figcaption>
               <p>
                 The views at the top of the dunes are amazing. You get to see how big the surrounding forest is and how close you are to the beach. 
@@ -50,7 +50,7 @@
         </li>
         <li>
           <figure class="photo">
-            <img src="/media/img/indiana-dunes3.jpg" alt="Picture of a road that leads deeper into the forest" />
+            <img src="../media/img/indiana-dunes3.jpg" alt="Picture of a road that leads deeper into the forest" />
             <figcaption>
               <p>
                 Indiana Dunes is a big national park. Even just getting from one camp site to the other takes a while when walking.
@@ -60,7 +60,7 @@
         </li>
         <li>
           <figure class="photo">
-            <img src="/media/img/indiana-dunes4.jpg" alt="Picture of trail inside the forest" />
+            <img src="../media/img/indiana-dunes4.jpg" alt="Picture of trail inside the forest" />
             <figcaption>
               <p>
                 There are many trails inside Indiana Dunes. It is easy to get lost if you are not following the trails and signs. 
@@ -78,7 +78,7 @@
       <ul>
         <li>
           <figure class="photo">
-            <img src="/media/img/starved-rock1.jpg" alt="Picture of a trail to a canyon" />
+            <img src="../media/img/starved-rock1.jpg" alt="Picture of a trail to a canyon" />
             <figcaption>
               <p>
                 The canyon water makes paths through the rocks.
@@ -88,7 +88,7 @@
         </li>
         <li>
           <figure class="photo">
-            <img src="/media/img/starved-rock2.jpg" alt="Picture of the lake and dam" />
+            <img src="../media/img/starved-rock2.jpg" alt="Picture of the lake and dam" />
             <figcaption>
               <p>
                 Climbing to the top of the mountains gives you a nice view of the lake and dam. 
@@ -98,7 +98,7 @@
         </li>
         <li>
           <figure class="photo">
-            <img src="/media/img/starved-rock3.jpg" alt="Picture of a small canyon" />
+            <img src="../media/img/starved-rock3.jpg" alt="Picture of a small canyon" />
             <figcaption>
               <p>
                 There are canyons of different sices at Starved Rock. This is one of the smaller ones.
@@ -108,7 +108,7 @@
         </li>
         <li>
           <figure class="photo">
-            <img src="/media/img/starved-rock4.jpg" alt="Picture of a big canyon" />
+            <img src="../media/img/starved-rock4.jpg" alt="Picture of a big canyon" />
             <figcaption>
               <p>
                 This one is one of the bigger canyons. The falling water is very refreshing, specially in a sunny day.
@@ -118,7 +118,7 @@
         </li>
         <li>
           <figure class="photo">
-            <img src="/media/img/starved-rock5.jpg" alt="Picture of the lake in the evening" />
+            <img src="../media/img/starved-rock5.jpg" alt="Picture of the lake in the evening" />
             <figcaption>
               <p>
                 The lake looks beautiful during certain times of the day, evening being one of them.
@@ -132,6 +132,6 @@
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
-  <script src="js/modernizr.js"></script>
+  <script src="../js/modernizr.js"></script>
   </body>
 </html>
