--- a/resume/index.html
+++ b/resume/index.html
@@ -12,10 +12,10 @@
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about/">About</a></li>
-          <li id="active"><a href="/resume/">Resume</a></li>
-          <li><a href="/places/">Places</a></li>
+          <li><a href="../">Home</a></li>
+          <li><a href="../about/">About</a></li>
+          <li id="active"><a href="../resume/">Resume</a></li>
+          <li><a href="../places/">Places</a></li>
         </ul>
       </nav>
       <h1 class="p-name">Ruben Estrada</h1> 
@@ -168,6 +168,6 @@
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
-  <script src="js/modernizr.js"></script>
+  <script src="../js/modernizr.js"></script>
   </body>
 </html>
