--- a/about/index.html
+++ b/about/index.html
@@ -12,10 +12,10 @@
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li id="active"><a href="/about/">About</a></li>
-          <li><a href="/resume/">Resume</a></li>
-          <li><a href="/places/">Places</a></li>
+          <li><a href="../">Home</a></li>
+          <li id="active"><a href="../about/">About</a></li>
+          <li><a href="../resume/">Resume</a></li>
+          <li><a href="../places/">Places</a></li>
         </ul>
       </nav>
     </header>
@@ -88,9 +88,9 @@
           </p>
           <figure class="photo">
             <img
-              srcset="/media/img/star4032-3024.jpg 4032w, /media/img/star2000-1500.jpg 2000w, /media/img/star1000-750.jpg 1000w, /media/img/star750-563.jpg 750w, /media/img/star500-375.jpg 500w"
+              srcset="../media/img/star4032-3024.jpg 4032w, ../media/img/star2000-1500.jpg 2000w, ../media/img/star1000-750.jpg 1000w, ../media/img/star750-563.jpg 750w, ../media/img/star500-375.jpg 500w"
               sizes="100vw"
-              src="/media/img/star500-375.jpg" alt="Photo of Star"/>
+              src="../media/img/star500-375.jpg" alt="Photo of Star"/>
             <figcaption>
               <p>
                 Star relaxing after a long day of running.
@@ -104,11 +104,11 @@
           </p>
           <figure class="video">
             <video controls="controls">
-              <source src="/media/video/turtle.mp4" type="video/mp4" />
-              <source src="/media/video/turtle.webm" type="video/webm" />
+              <source src="../media/video/turtle.mp4" type="video/mp4" />
+              <source src="../media/video/turtle.webm" type="video/webm" />
               <p>
                 Download the video in
-                <a href="/media/video/turtle.mp4">MPEG</a> format.
+                <a href="../media/video/turtle.mp4">MPEG</a> format.
               </p>
             </video>
             <figcaption>
@@ -124,6 +124,6 @@
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
-  <script src="js/modernizr.js"></script>
+  <script src="../js/modernizr.js"></script>
   </body>
 </html>
