--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shirnk-to-fit=no" />
-    <link rel="stylesheet" media="screen" href="css/screen.css" />
-    <link rel="icon" type="image/ico" href="media/img/favicon.ico" />
+    <link rel="stylesheet" media="screen" href="./css/screen.css" />
+    <link rel="icon" type="image/ico" href="./media/img/favicon.ico" />
     <title>Ruben Estrada: Home</title>
   </head>
   <body>
@@ -12,10 +12,10 @@
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li id="active"><a href="/">Home</a></li>
-          <li><a href="/about/">About</a></li>
-          <li><a href="/resume/">Resume</a></li>
-          <li><a href="/places/">Places</a></li>
+          <li id="active"><a href="./">Home</a></li>
+          <li><a href="./about/">About</a></li>
+          <li><a href="./resume/">Resume</a></li>
+          <li><a href="./places/">Places</a></li>
         </ul>
       </nav>
     </header>
@@ -23,13 +23,13 @@
       <h1>Home</h1>
       <p class="description">Hello there, from here you can get to any of the other three websites. Enjoy</p>
       <figure class="gif">
-        <img src="/media/gif/hi.gif" alt="Gif of snail waving hi" />
+        <img src="./media/gif/hi.gif" alt="Gif of snail waving hi" />
       </figure> 
     </section>
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
-  <script src="js/modernizr.js"></script>
+  <script src="./js/modernizr.js"></script>
   </body>
 </html>
